syntax = "proto3";

package org.brewchain.account.gens;

// bc_unsend_tx -- 未发送交易
// { bc_unsend_tx, 'txHash1' }, { bc_unsend_tx, 'txHash2' }, { bc_unsend_tx, 'txHash3' }

// bc_wait_tx -- 已确认未block交易
// 

enum PTXTModule {
    TXT = 0; // 交易
};

enum PTXTCommand {
    STX = 0; // 保存交易
    GUT = 1; // 获取未发送交易
	AYC = 2; // 同步交易
	GTX = 3; // 获取交易
	MTX = 4; // 保存多重交易

	// 暂时不用
	// CTX = 3; // 节点确认交易
	// DTX = 4; // 节点回滚交易 
	// BTX = 5; // 获取已确认未block交易
}

message ReqCreateSingleTransaction {
	SingleTransaction transaction = 1;
}

message ReqCreateMultiTransaction {
	MultiTransaction transaction = 1;
}

message SingleTransaction {
	bytes txHash = 1;
	int32 nonce = 2;
	int32 fee = 3;
	int32 feeLimit = 4;
	bytes receiveAddress= 5;
	bytes senderAddress = 6;
	int64 amount= 7;
	bytes data= 8;
	int64 timestamp = 9;
	bytes exdata = 10;
	string signature = 11;
	string pubKey = 12;
	repeated bytes delegate = 13;
	string token = 14;
}

message MultiTransaction {
	repeated MultiTransactionInput inputs = 1;
	repeated MultiTransactionOutput outputs = 2;
	bytes exdata = 3;
	repeated MultiTransactionSignature signatures = 4;
	bytes txHash = 5;
	repeated bytes delegate = 6;
	bytes data = 7;
} 

message MultiTransactionInput {
	int32 nonce = 1;
	int32 fee = 2;
	int32 feeLimit = 3;
	bytes address = 4;
	int64 amount= 5;
	string pubKey = 6;
	string token = 7;
}

message MultiTransactionOutput {
	bytes address= 1;
	int64 amount= 2;
}

message MultiTransactionSignature {
	string signature = 1;
	string pubKey = 2;
}

message RespCreateTransaction {
    bytes txHash = 1;
	int32 retCode = 2;
	string retMsg = 3;
}

message ReqGetTxToSync {
	int32 total = 1;
}

message RespGetTxToSync {
	repeated MultiTransaction txs = 1;
	int32 txCount = 2;
}

message ReqSyncTx {
	repeated MultiTransaction txs = 1;
}

message RespSyncTx {
	int32 retCode = 1;
	repeated bytes errList = 2;
}

message ReqGetTxByHash {
	bytes txHash = 1;
}

message RespGetTxByHash {
	MultiTransaction transaction = 1;
	int32 retCode = 2;
}

// 统计
// 交易笔数
// 广播笔数
// 日交易总额